# IPCTest

./: CMakeLists.txt
IPCTestCommon/include/: common.h  instance_locker.h  queue.h  shared_queue.h  signal_handlers.h
IPCTestConsumer/: CMakeLists.txt  main.cpp  statistics_printer.cpp  statistics_printer.h
IPCTestProducer/: CMakeLists.txt  main.cpp
